--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -66,3 +66,20 @@ body {
     height: 350px;
     object-fit: cover;
 }
+
+table {
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: auto;
+    border-collapse: collapse;
+    border: 3px solid #666;
+}
+
+th,td {
+    border: 2px solid #ccc;
+    padding: 8px 15px;
+    text-align: center;
+}
+a{
+    color: white;
+}
